# Heritage-Damage-Assessment

./: .gitignore  README.md
heritage-backend/: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
heritage-backend/app/: __init__.py  main.py
heritage-backend/app/api/: __init__.py  router.py
heritage-backend/app/api/v1/: __init__.py  dependencies.py
heritage-backend/app/api/v1/endpoints/: __init__.py  health.py  models.py  predict.py
heritage-backend/app/core/: __init__.py  config.py  exceptions.py  logging.py
heritage-backend/app/middleware/: __init__.py  error_handler.py  logging_middleware.py  request_id.py
heritage-backend/app/ml/: __init__.py  base_predictor.py  efficientnet_predictor.py  mock_predictor.py  model_registry.py  preprocessing.py  resnet_predictor.py  vit_predictor.py  yolo_predictor.py
heritage-backend/app/schemas/: __init__.py  errors.py  health.py  prediction.py
heritage-backend/app/services/: __init__.py  image_service.py  prediction_service.py
heritage-backend/app/utils/: __init__.py  constants.py  image_utils.py
heritage-backend/tests/: __init__.py  conftest.py  test_health.py  test_predict.py
heritage-frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
heritage-frontend/src/: App.jsx
heritage-frontend/src/api/: client.js  health.js  models.js  predict.js
heritage-frontend/src/constants/: index.js
heritage-frontend/src/hooks/: useHealth.js  useModels.js  usePrediction.js
heritage-frontend/src/pages/: AboutPage.jsx  AssessPage.jsx  (+1 more)
(+14 files in other folders)
