[project]
name = "heritage-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.29.0",
    "numpy>=1.26.0",
    "pillow>=10.3.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
inference = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "pillow>=10.3.0",          # explicit if used outside torchvision
    "timm>=1.0.7",
]
detection = [
    "heritage-backend[inference]",
    "ultralytics>=8.3.0",
]
explainability = [
    "heritage-backend[inference]",
    "grad-cam>=1.5.0",
    "torch-ema>=0.3",
]
logging = [
    "python-json-logger>=2.0.7",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
all = [
    "heritage-backend[detection,explainability,logging,dev]",
]